@@ -5806,7 +5806,8 @@ with the arguments given by
 The
 .B \-p
 option causes
-a default path to be searched
+the operating system's standard utilities path
+(as output by \f3getconf PATH\fP) to be searched
 rather than the one defined by the value of
 .SM
 .BR PATH .
